syntax = "proto3";

option go_package = "pb/game";

message CooldownTable {
	uint32 id = 1;
	uint32 duration = 2;
}

message CooldownTabledData {
	repeated CooldownTable data = 1;
}
